Tue Dec 21 18:01:15 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Encorporated modify.c, contributed by Andrew Glover
	<aglover@axe.net>. These functions wrap imlib2 modification
	functions, and will be handy when I make some menus :) We'll be
	able to do scaling, tiling, color modifiers, and more.

Tue Dec 21 03:28:30 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* And now the thing won't go mad when you hold down a change-slide
	button in Slideshow mode... Before it stored *all* the KeyPresses
	and responded to *all* of them. Hehe. It was fun watching it go
	round though :)

Mon Dec 20 17:35:25 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Hehe. Ooops. I only need to blend on zoom if the image *has* an
	alpha channel. Hehe. Ok, now zooming is *much* faster and
	smoother, and I am slightly less of an idiot.

Mon Dec 20 16:46:58 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Okay, I'm still a newbie at this X stuff :) Made some
	optimisations to the main loop which speed things up a
	bunch.
	* Added better error handling when loading images.
	* The Q or q key can now be used to exit the app in any mode.

Mon Dec 20 15:22:43 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Added some utility functions, so I don't have to write
	if((s=malloc(blah))==NULL){fprintf("oops\n");exit(2);}
	15 million times. It really bugs me ;-)

Mon Dec 20 12:53:28 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Hehe. I like slideshow mode so much its now the default :)
	Having multiple images pop up one-per-window can be quite evil, so
	Slideshow mode is prefered. To open multiple images
	one-per-window, you now need to specify -w or -multiwindow.
	* I also fixed a couple of things, lowered slideshow overhead,
	tightened up the main loop somewhat, and a coupla things really
	late last night which I can't remember ;-)

Sun Dec 19 22:06:43 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>
